// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<html
  id="html-id"
  lang="en"
>
  <head>
    <title>
      title
    </title>
    <meta
      charSet="utf-8"
    />
    <meta
      content="A varan react starter app"
      name="description"
    />
    <noscript>
      javascript is required
    </noscript>
    <base
      href="http://example.com/"
      target="_blank"
    />
    <link
      crossOrigin="anonymous"
      href="manifest.json"
      rel="manifest"
    />
    <link
      href="style.css"
      rel="stylesheet"
    />
    <link
      data-react-helmet="true"
      href="favicon.ico"
      rel="icon"
    />
    <link
      as="script"
      crossOrigin="anonymous"
      href="jsfile.js"
      rel="preload"
    />
    <link
      as="style"
      crossOrigin="anonymous"
      href="cssfile.css"
      rel="preload"
    />
    <link
      as="image"
      crossOrigin="anonymous"
      href="imgfile.png"
      rel="preload"
    />
    <link
      crossOrigin="anonymous"
      href="main.css"
      rel="stylesheet"
    />
    <link
      crossOrigin="anonymous"
      href="extra.css"
      rel="stylesheet"
    />
    <style>
      html { background-color: red; }
    </style>
    <script
      id="somescript"
      type="text/javascript"
    >
      window.asd = true;
    </script>
  </head>
  <body
    id="body-id"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": <p>
            the html body
          </p>,
        }
      }
      id="root"
    />
    <script
      dangerouslySetInnerHTML={
        Object {
          "__html": "window.__INITIAL_REDUX_STATE__ = {}",
        }
      }
      id="initial-state"
      type="text/javascript"
    />
    <script
      crossOrigin="anonymous"
      defer={true}
      src="main.js"
      type="text/javascript"
    />
    <script
      crossOrigin="anonymous"
      defer={true}
      src="extra.js"
      type="text/javascript"
    />
  </body>
</html>
`;

exports[`should support integrity properties 1`] = `
<html
  id="html-id"
  lang="en"
>
  <head>
    <title>
      title
    </title>
    <meta
      charSet="utf-8"
    />
    <meta
      content="A varan react starter app"
      name="description"
    />
    <noscript>
      javascript is required
    </noscript>
    <base
      href="http://example.com/"
      target="_blank"
    />
    <link
      crossOrigin="anonymous"
      href="manifest.json"
      integrity="my-integrity"
      rel="manifest"
    />
    <link
      href="style.css"
      rel="stylesheet"
    />
    <link
      data-react-helmet="true"
      href="favicon.ico"
      rel="icon"
    />
    <link
      as="script"
      crossOrigin="anonymous"
      href="jsfile.js"
      integrity="my-integrity1"
      rel="preload"
    />
    <link
      as="style"
      crossOrigin="anonymous"
      href="cssfile.css"
      integrity="my-integrity2"
      rel="preload"
    />
    <link
      as="image"
      crossOrigin="anonymous"
      href="imgfile.png"
      integrity="my-integrity4"
      rel="preload"
    />
    <link
      crossOrigin="anonymous"
      href="main.css"
      integrity="my-integrity"
      rel="stylesheet"
    />
    <link
      crossOrigin="anonymous"
      href="extra.css"
      integrity="my-integrity"
      rel="stylesheet"
    />
    <style>
      html { background-color: red; }
    </style>
    <script
      id="somescript"
      type="text/javascript"
    >
      window.asd = true;
    </script>
  </head>
  <body
    id="body-id"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": <p>
            the html body
          </p>,
        }
      }
      id="root"
    />
    <script
      dangerouslySetInnerHTML={
        Object {
          "__html": "window.__INITIAL_REDUX_STATE__ = {}",
        }
      }
      id="initial-state"
      type="text/javascript"
    />
    <script
      crossOrigin="anonymous"
      defer={true}
      integrity="my-integrity"
      src="main.js"
      type="text/javascript"
    />
    <script
      crossOrigin="anonymous"
      defer={true}
      integrity="my-integrity"
      src="extra.js"
      type="text/javascript"
    />
  </body>
</html>
`;
